5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1706_3041.log
== TEST (2019-04-29 19:26:40) 
-- CODE:
x=float(input("x: "))

if((-1000<=x) or (x<-2)):
	
	fx= -1*(1/(x+2))

elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	
else: 
		

-- ERROR:
File "XXXX", line 13
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:29:43) 
-- CODE:
x=float(input("x: "))

if((-1000<=x) or (x<-2)):
	
	fx= -1*(1/(x+2))
	print(round(fx,4))
	
else if ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- ERROR:
File "XXXX", line 8
    else if ((x>2) or (x<=1000)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:25) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -1*(1/(x+2))
	print(round(fx,4))
	
else if ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- ERROR:
File "XXXX", line 8
    else if ((x>2) or (x<=1000)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:30:41) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -1*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:31:12) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -1*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:31:44) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:03) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:32:11) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- EXECUTION TIME:
0.183046
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:
-0.2857
-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:34) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= -1*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:32:55) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) or (x<-2)):
	
	fx= (-1)*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) or (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- OUTPUT:
0.001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:51:57) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) and (x<-2)):
	
	fx= (-1)*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) and (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- EXECUTION TIME:
0.186549
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:
x: entrada invalida
-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
x: 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:52:06) 
-- CODE:
x=float(input("x: "))

if((x >= -1000) and (x<-2)):
	
	fx= (-1)*(1/(x+2))
	print(round(fx,4))
	
elif ((x>2) and (x<=1000)):
	
	fx=(1/(x-2))
	print(round(fx,4))
	
else:
	print("entrada invalida")
	


-- EXECUTION TIME:
0.133966
-- TEST CASE 1:
---- input:
-999.99
---- correct output:
0.001
---- user output:
0.001
-- TEST CASE 2:
---- input:
1.5
---- correct output:
entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
-2.01
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
